--- a/Aula36/assets/css/styles.css
+++ b/Aula36/assets/css/styles.css
@@ -9,19 +9,24 @@ body {
     font-size: 40px;
 }
 
-.grid {
+.container {
     max-width: 1200px;
     margin: 0 auto;
-    display: grid;
-    /* grid-template-columns: repeat(auto-fill, minmax(320px, 1fr)); */
-    grid-template-columns: [um] 1fr [dois] 1fr [tres] 1fr [quatro];
-    grid-template-rows: [um] 1fr [dois] 1fr [tres] 1fr [quatro];
-    gap: 30px;
-    /* row-gap: 30px; */
+    overflow-x: hidden;
+}
+
+.grid {
+    width: calc(100% + 30px);
+    display: grid;  
+    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+    margin-right: -30px;
 }
 
 .grid div {
     background: tomato;
+    min-height: 100px;
+    margin-right: 30px;
+    margin-bottom: 30px;
 }
 
 .grid div:nth-child(5) {
